[project]
name = "mpas_tools"
dynamic = ["version"]
authors = [
    { name="Xylar Asay-Davis", email="xylar@lanl.gov" },
    { name="Matt Hoffman" },
    { name="Doug Jacobsen" },
    { name="Trevor Hillebrand" },
    { name="Michael Duda" },
    { name="Mark Petersen" },
    { name="Holly Han" },
    { name="Phillip J. Wolfram" },
    { name="Todd Ringler" },
    { name="Tong Zhang" },
    { name="Adrian K. Turner" },
    { name="Stephen Price" },
    { name="Althea Denlinger" },
    { name="Alexander Hager" },
    { name="Joseph H. Kennedy" },
    { name="Cameron Smith" },
    { name="Juan Saenz" },
    { name="Darren Engwirda" },
    { name="Andrew Nolan" },
    { name="Dom Heinzeller" },
    { name="Carolyn Begeman" },
    { name="Miles Curry" },
    { name="Luke Van Roekel" },
    { name="Mauro Perego" },
    { name="Maciej Waruszewski" },
    { name="William Lipscomb" },
    { name="Riley Brady" },
]
description = """\
    A set of tools for creating and manipulating meshes for the climate 
    components based on the Model for Prediction Across Scales (MPAS) framework
    """
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    # these are only for searching/browsing projects on PyPI
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "cartopy",
    "cmocean",
    "dask",
    "inpoly",
    "matplotlib >=3.9.0",
    "netcdf4",
    "numpy",
    "progressbar2",
    "pyamg",
    "pyevtk",
    "pyproj",
    "igraph",
    "scikit-image",
    "scipy",
    "shapely >=2.0,<3.0",
    "xarray"
]

[tool.isort]
multi_line_output = "3"
include_trailing_comma = true
force_grid_wrap = "0"
use_parentheses = true
line_length = "79"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "../mesh_tools/mesh_conversion_tools/mark_horns_for_culling.py",
    "../mesh_tools/planar_grid_transformations/set_lat_lon_fields_in_planar_grid.py",
    "../mesh_tools/create_SCRIP_files/create_SCRIP_file_from_MPAS_mesh.py",
    "../mesh_tools/create_SCRIP_files/create_SCRIP_file_from_planar_rectangular_grid.py",
    "../landice/mesh_tools_li/create_landice_grid_from_generic_MPAS_grid.py",
    "../landice/mesh_tools_li/define_cullMask.py",
    "../landice/mesh_tools_li/interpolate_to_mpasli_grid.py",
    "../landice/mesh_tools_li/mark_domain_boundaries_dirichlet.py",
    "../ocean/coastline_alteration/add_land_locked_cells_to_mask.py",
    "../ocean/coastline_alteration/widen_transect_edge_masks.py",
    "../ocean/coastline_alteration/add_critical_land_blockages_to_mask.py",
    "../ocean/moc_southern_boundary_extractor/moc_southern_boundary_extractor.py",
    "../visualization/paraview_vtk_field_extractor/paraview_vtk_field_extractor.py"
]

[tool.setuptools.dynamic]
version = { attr = "mpas_tools.__init__.__version__" }

# evolution of options.entry-points
[project.scripts]
planar_hex = "mpas_tools.planar_hex:main"
translate_planar_grid = "mpas_tools.translate:main"
merge_grids = "mpas_tools.merge_grids:main"
split_grids = "mpas_tools.split_grids:main"
inject_bathymetry = "mpas_tools.ocean.inject_bathymetry:main"
inject_preserve_floodplain = "mpas_tools.ocean.inject_preserve_floodplain:main"
ocean_add_depth = "mpas_tools.ocean.depth:main_add_depth"
ocean_add_zmid = "mpas_tools.ocean.depth:main_add_zmid"
ocean_write_time_varying_zmid = "mpas_tools.ocean.depth:main_write_time_varying_zmid"
plot_ocean_transects = "mpas_tools.ocean.viz.transects:main"
mpas_to_triangle = "mpas_tools.mesh.creation.mpas_to_triangle:main"
triangle_to_netcdf = "mpas_tools.mesh.creation.triangle_to_netcdf:main"
jigsaw_to_netcdf = "mpas_tools.mesh.creation.jigsaw_to_netcdf:main"
sort_mesh = "mpas_tools.mesh.creation.sort_mesh:main"
scrip_from_mpas = "mpas_tools.scrip.from_mpas:main"
compute_mpas_region_masks = "mpas_tools.mesh.mask:entry_point_compute_mpas_region_masks"
compute_mpas_transect_masks = "mpas_tools.mesh.mask:entry_point_compute_mpas_transect_masks"
compute_mpas_flood_fill_mask = "mpas_tools.mesh.mask:entry_point_compute_mpas_flood_fill_mask"
compute_lon_lat_region_masks = "mpas_tools.mesh.mask:entry_point_compute_lon_lat_region_masks"
compute_projection_region_masks = "mpas_tools.mesh.mask:entry_point_compute_projection_grid_region_masks"
prepare_seaice_partitions = "mpas_tools.seaice.partition:prepare_partitions"
create_seaice_partitions = "mpas_tools.seaice.partition:create_partitions"
simple_seaice_partitions = "mpas_tools.seaice.partition:simple_partitions"
vector_reconstruct = "mpas_tools.vector.reconstruct:main"

[project.urls]
Documentation = "http://mpas-dev.github.io/MPAS-Tools/master/"
"Bug Tracker" = "https://github.com/MPAS-Dev/MPAS-Tools/issues"
